--- a/templates/results.html
+++ b/templates/results.html
@@ -19,6 +19,7 @@
 			<ul class="grid effect-6" id="grid">
                             {% for fl in result_paths %}
 				<li><img src="{{ fl }}"></li>
+                            {% endfor %}
 			</ul>
 		</div>
 		<script src="../static/js/masonry.pkgd.min.js"></script>
