--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Buddy Search</title>
-		<meta name="description" content="Bud image search engine" />
-		<meta name="keywords" content="cannabis" />
+		<title>Image Search</title>
+		<meta name="description" content="my image search engine" />
+		<meta name="keywords" content="image search" />
 		<link rel="stylesheet" type="text/css" href="../static/css/default.css" />
 		<link rel="stylesheet" type="text/css" href="../static/css/component.css" />
 
@@ -39,13 +39,13 @@
 	<body>
 		<div class="container">
                         <header>
-				<h1>Buddy Search<span>Drop an image and search for similar buds</span></h1>	
+				<h1>Image Search<span>Drop an image and search for similar images</span></h1>	
 			</header>
 		</div>
 
                 <div>
                    <form action="#" method="POST" enctype="multipart/form-data" onSubmit="return check()">
-                      <p><input type="file" id="input-file-now" class="dropify" data-height="350" data-max-file-size="1G" data-allowed-file--extensions="png jpg jpeg gif" name="file[]" /></p>
+                      <p><input type="file" id="input-file-now" class="dropify" data-height="350" data-max-file-size="1G" data-allowed-file--extensions="png jpg jpeg" name="file[]" /></p>
                       <br>
                       <p><input type="submit" value="Submit" /></p>
                    </form>
