--- a/templates/results.html
+++ b/templates/results.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Buddy Search</title>
-		<meta name="description" content="Bud image search engine" />
-		<meta name="keywords" content="cannabis" />
+		<title>Image Search</title>
+		<meta name="description" content="image search engine" />
+		<meta name="keywords" content="image search" />
 		<link rel="stylesheet" type="text/css" href="../static/css/default.css" />
 		<link rel="stylesheet" type="text/css" href="../static/css/component.css" />
 		<script src="../static/js/modernizr.custom.js"></script>
@@ -14,11 +14,11 @@
 	<body>
 		<div class="container">
                         <header>
-				<h1>Buddy Search<span> results </span></h1>	
+				<h1>Image Search<span> results </span></h1>	
 			</header>
 			<ul class="grid effect-6" id="grid">
                             {% for fl in result_paths %}
-				<li><img src="{{ fl }}"></li>
+				<li><img src="{{ url_for('get_image', filename=fl) }}"></li>
                             {% endfor %}
 			</ul>
 		</div>
