--- a/static/assets/sass/base/_typography.scss
+++ b/static/assets/sass/base/_typography.scss
@@ -1,50 +1,45 @@
 ///
-/// Stellar by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+/// Indivisible by Pixelarity
+/// pixelarity.com | hello@pixelarity.com
+/// License: pixelarity.com/license
 ///
 
 /* Type */
 
-	body {
-		background-color: _palette(bg);
-		color: _palette(fg);
-	}
-
 	body, input, select, textarea {
+		color: _palette(fg);
 		font-family: _font(family);
-		font-size: 17pt;
+		font-size: 14pt;
 		font-weight: _font(weight);
-		line-height: 1.65;
+		line-height: 1.75;
+		letter-spacing: _font(letter-spacing);
 
 		@include breakpoint('<=xlarge') {
-			font-size: 14pt;
-		}
-
-		@include breakpoint('<=large') {
-			font-size: 12pt;
+			font-size: 11pt;
 		}
 
 		@include breakpoint('<=xxsmall') {
-			font-size: 11pt;
+			font-size: 10pt;
 		}
 	}
 
 	a {
 		@include vendor('transition', (
 			'color #{_duration(transition)} ease',
-			'border-bottom #{_duration(transition)} ease'
+			'border-bottom-color #{_duration(transition)} ease'
 		));
 		text-decoration: none;
 		border-bottom: dotted 1px;
 		color: inherit;
 
 		&:hover {
+			color: _palette(accent) !important;
 			border-bottom-color: transparent;
 		}
 	}
 
 	strong, b {
+		color: _palette(fg-bold);
 		font-weight: _font(weight-bold);
 	}
 
@@ -54,25 +49,16 @@
 
 	p {
 		margin: 0 0 _size(element-margin) 0;
-
-		&.content {
-			-moz-columns: 20em 2;
-			-webkit-columns: 20em 2;
-			-ms-columns: 20em 2;
-			columns: 20em 2;
-			-moz-column-gap: _size(element-margin);
-			-webkit-column-gap: _size(element-margin);
-			-ms-column-gap: _size(element-margin);
-			column-gap: _size(element-margin);
-			text-align: justify;
-		}
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-weight: _font(weight);
+		color: _palette(fg-bold);
+		font-family: _font(family-heading);
+		font-weight: _font(weight-heading);
 		line-height: 1.5;
-		margin: 0 0 (_size(element-margin) * 0.35) 0;
-		letter-spacing: _font(letter-spacing);
+		margin: 0 0 (_size(element-margin) * 0.5) 0;
+		text-transform: uppercase;
+		letter-spacing: _font(letter-spacing-alt);
 
 		a {
 			color: inherit;
@@ -81,12 +67,11 @@
 	}
 
 	h1 {
-		font-size: 2.5em;
-		line-height: 1.2;
+		font-size: 2em;
 	}
 
 	h2 {
-		font-size: 1.5em;
+		font-size: 1.75em;
 	}
 
 	h3 {
@@ -94,7 +79,7 @@
 	}
 
 	h4 {
-		font-size: 1.1em;
+		font-size: 1em;
 	}
 
 	h5 {
@@ -107,7 +92,11 @@
 
 	@include breakpoint('<=small') {
 		h1 {
-			font-size: 2em;
+			font-size: 1.5em;
+		}
+
+		h2 {
+			font-size: 1.25em;
 		}
 	}
 
@@ -124,15 +113,16 @@
 	}
 
 	blockquote {
-		border-left: solid 4px;
+		border-left: solid 4px _palette(border);
 		font-style: italic;
 		margin: 0 0 _size(element-margin) 0;
 		padding: (_size(element-margin) / 4) 0 (_size(element-margin) / 4) _size(element-margin);
 	}
 
 	code {
+		background: _palette(border-bg);
 		border-radius: _size(border-radius);
-		border: solid 1px;
+		border: solid 1px _palette(border);
 		font-family: _font(family-fixed);
 		font-size: 0.9em;
 		margin: 0 0.25em;
@@ -155,7 +145,7 @@
 
 	hr {
 		border: 0;
-		border-bottom: solid 1px;
+		border-bottom: solid 1px _palette(border);
 		margin: _size(element-margin) 0;
 
 		&.major {
@@ -174,43 +164,3 @@
 	.align-right {
 		text-align: right;
 	}
-
-	@mixin color-typography($p: null) {
-		@if $p != null {
-			background-color: _palette($p, bg);
-			color: _palette($p, fg);
-		}
-
-		input, select, textarea {
-			color: _palette($p, fg-bold);
-		}
-
-		a {
-			&:hover {
-				color: _palette($p, fg-bold);
-			}
-		}
-
-		strong, b {
-			color: _palette($p, fg-bold);
-		}
-
-		h1, h2, h3, h4, h5, h6 {
-			color: _palette($p, fg-bold);
-		}
-
-		blockquote {
-			border-left-color: _palette($p, border);
-		}
-
-		code {
-			background: _palette($p, border-bg);
-			border-color: _palette($p, border);
-		}
-
-		hr {
-			border-bottom-color: _palette($p, border);
-		}
-	}
-
-	@include color-typography;
