--- a/static/assets/sass/components/_box.scss
+++ b/static/assets/sass/components/_box.scss
@@ -1,14 +1,14 @@
 ///
-/// Stellar by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+/// Indivisible by Pixelarity
+/// pixelarity.com | hello@pixelarity.com
+/// License: pixelarity.com/license
 ///
 
 /* Box */
 
 	.box {
 		border-radius: _size(border-radius);
-		border: solid _size(border-width);
+		border: solid 1px _palette(border);
 		margin-bottom: _size(element-margin);
 		padding: 1.5em;
 
@@ -24,11 +24,3 @@
 			padding: 0;
 		}
 	}
-
-	@mixin color-box($p: null) {
- 		.box {
- 			border-color: _palette($p, border);
- 		}
-	}
-
-	@include color-box;
