--- a/static/assets/sass/base/_page.scss
+++ b/static/assets/sass/base/_page.scss
@@ -1,7 +1,7 @@
 ///
-/// Stellar by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+/// Indivisible by Pixelarity
+/// pixelarity.com | hello@pixelarity.com
+/// License: pixelarity.com/license
 ///
 
 /* Basic */
@@ -9,11 +9,6 @@
 	// MSIE: Required for IEMobile.
 		@-ms-viewport {
 			width: device-width;
-		}
-
-	// MSIE: Prevents scrollbar from overlapping content.
-		body {
-			-ms-overflow-style: scrollbar;
 		}
 
 	// Ensures page width is always >=320px.
@@ -34,14 +29,10 @@
 		}
 
 	body {
-		background-color: _palette(bg);
-		@include vendor('background-image', (
-			'url("images/overlay.png")',
-			'linear-gradient(45deg, #{_palette(bg1)} 15%, #{_palette(bg2) 85%})',
-		));
+		background: _palette(bg);
 
 		// Stops initial animations until page loads.
-			&.is-preload {
+			&.is-preload-0 {
 				*, *:before, *:after {
 					@include vendor('animation', 'none !important');
 					@include vendor('transition', 'none !important');
