--- a/static/assets/sass/components/_icons.scss
+++ b/static/assets/sass/components/_icons.scss
@@ -1,7 +1,7 @@
 ///
-/// Stellar by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+/// Indivisible by Pixelarity
+/// pixelarity.com | hello@pixelarity.com
+/// License: pixelarity.com/license
 ///
 
 /* Icons */
@@ -13,10 +13,18 @@
 
 		li {
 			display: inline-block;
-			padding: 0 0.65em 0 0;
+			padding-left: 0;
 
-			&:last-child {
-				padding-right: 0 !important;
+			.icon {
+				display: inline-block;
+				width: 2.5em;
+				height: 2.5em;
+				line-height: 2.5em;
+				text-align: center;
+
+				&:before {
+					font-size: 1.25rem;
+				}
 			}
 		}
 	}
