--- a/static/assets/sass/components/_section.scss
+++ b/static/assets/sass/components/_section.scss
@@ -1,7 +1,7 @@
 ///
-/// Stellar by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+/// Indivisible by Pixelarity
+/// pixelarity.com | hello@pixelarity.com
+/// License: pixelarity.com/license
 ///
 
 /* Section/Article */
@@ -13,92 +13,48 @@
 	}
 
 	header {
-		&.major {
-			margin-bottom: (_size(element-margin) * 1.5);
+		margin: (_size(element-margin) * 1.5) 0;
 
-			h2 {
-				font-size: 2em;
+		> :first-child {
+			margin-bottom: 0;
 
+			&:after {
+				content: '';
+				display: block;
+				background-color: _palette(border);
+				height: 1px;
+				margin: 1.5rem 0 1.75rem 0;
+				width: 5rem;
+
+				.special & {
+					margin-left: auto;
+					margin-right: auto;
+				}
+			}
+		}
+
+		p {
+			font-size: 0.9em;
+			letter-spacing: _font(letter-spacing-alt);
+			margin-bottom: 0;
+			text-transform: uppercase;
+		}
+
+		@include breakpoint('<=small') {
+			margin: _size(element-margin) 0;
+
+			> :first-child {
 				&:after {
-					display: block;
-					content: '';
-					width: 3.25em;
-					height: 2px;
-					margin: (_size(element-margin) * 0.35) 0 (_size(element-margin) * 0.5) 0;
-					border-radius: 2px;
-
-					section.special &, article.special & {
-						margin-left: auto;
-						margin-right: auto;
-					}
+					margin: 1.25rem 0 1.5rem 0;
 				}
 			}
 
 			p {
-				font-size: 1.25em;
-				letter-spacing: _font(letter-spacing);
-			}
+				font-size: 0.8em;
 
-			&.special {
-				text-align: center;
-
-				h2 {
-					&:after {
-						margin-left: auto;
-						margin-right: auto;
-					}
+				br {
+					display: none;
 				}
 			}
 		}
 	}
-
-	footer {
-		&.major {
-			margin-top: (_size(element-margin) * 1.5);
-		}
-	}
-
-	@include breakpoint('<=small') {
-		header {
-			&.major {
-				margin-bottom: 0;
-
-				h2 {
-					font-size: 1.5em;
-				}
-
-				p {
-					font-size: 1em;
-					letter-spacing: 0;
-
-					br {
-						display: none;
-					}
-				}
-			}
-		}
-
-		footer {
-			&.major {
-				margin-top: 0;
-			}
-		}
-	}
-
-	@mixin color-section($p: null) {
-		header {
-			&.major {
-				h2 {
-					&:after {
-						background-color: _palette($p, border);
-
-						@if $p == 'invert' {
-							@include vendor('background-image', 'linear-gradient(90deg, #{_palette(accent1)}, #{_palette(accent3)}, #{_palette(accent5)})');
-						}
-					}
-				}
-			}
-		}
-	}
-
-	@include color-section;
