--- a/static/assets/sass/layout/_wrapper.scss
+++ b/static/assets/sass/layout/_wrapper.scss
@@ -1,21 +1,30 @@
 ///
-/// Stellar by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+/// Indivisible by Pixelarity
+/// pixelarity.com | hello@pixelarity.com
+/// License: pixelarity.com/license
 ///
 
 /* Wrapper */
 
 	#wrapper {
-		width: _size(inner);
-		max-width: calc(100% - 4em);
-		margin: 0 auto;
+		@include vendor('display', 'flex');
+		@include vendor('align-items', 'center');
+		@include vendor('flex-direction', 'column');
+		@include vendor('justify-content', 'center');
+		@include vendor('perspective', '1000px');
+		min-height: 100vh;
+		padding: (_size(element-margin) * 1.5);
+		width: 100%;
 
-		@include breakpoint('<=xsmall') {
-			max-width: calc(100% - 2em);
+		@include breakpoint('<=large') {
+			padding: (_size(element-margin) * 0.75);
 		}
 
-		@include breakpoint('<=xxsmall') {
-			max-width: 100%;
+		@include breakpoint('<=medium') {
+			padding: _size(element-margin);
+		}
+
+		@include breakpoint('<=small') {
+			padding: (_size(element-margin) * 0.5);
 		}
 	}
