--- a/static/assets/sass/main.scss
+++ b/static/assets/sass/main.scss
@@ -3,14 +3,13 @@
 @import 'libs/mixins';
 @import 'libs/vendor';
 @import 'libs/breakpoints';
-@import 'libs/html-grid';
 @import 'font-awesome.min.css';
-@import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400';
+@import url('https://fonts.googleapis.com/css?family=Raleway|Montserrat:700');
 
 /*
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Indivisible by Pixelarity
+	pixelarity.com | hello@pixelarity.com
+	License: pixelarity.com/license
 */
 
 // Breakpoints.
@@ -24,20 +23,6 @@
 		xxsmall:  ( null,    360px  )
 	));
 
-// Mixins.
-
-	@mixin color($p) {
-		@include color-typography($p);
-		@include color-box($p);
-		@include color-button($p);
-		@include color-form($p);
-		@include color-icon($p);
-		@include color-list($p);
-		@include color-section($p);
-		@include color-table($p);
-		@include color-spotlight($p);
-	}
-
 // Base.
 
 	@import 'base/reset';
@@ -46,25 +31,19 @@
 
 // Component.
 
-	@import 'components/row';
-	@import 'components/box';
-	@import 'components/button';
+	@import 'components/section';
 	@import 'components/form';
+	@import 'components/box';
 	@import 'components/icon';
 	@import 'components/image';
 	@import 'components/list';
 	@import 'components/actions';
 	@import 'components/icons';
-	@import 'components/section';
 	@import 'components/table';
-	@import 'components/features';
-	@import 'components/statistics';
-	@import 'components/spotlight';
+	@import 'components/button';
 
 // Layout.
 
-	@import 'layout/header';
-	@import 'layout/nav';
-	@import 'layout/main';
-	@import 'layout/footer';
 	@import 'layout/wrapper';
+	@import 'layout/panel';
+	@import 'layout/footer';
